feat: add polymarket and update compatibility to... everything